<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="todo">TODO</string>
    <string name="bmi">BMI Calculator</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="calculate">Calculate</string>
    <string name="_23_6_you_ara_a_healthy_weight">23.6 you ara a healthy weight</string>
    <string name="weight">Weight</string>
</resources>