<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="70dp">

    <ImageView
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/bmi" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/bmi" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_btn_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radio_btn_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>

    <EditText

        android:id="@+id/edit_text_age"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:autofillHints="Number"
        android:hint="@string/age"
        android:inputType="number" />

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_text_feet"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:autofillHints="feet"
            android:hint="@string/feet"
            android:inputType="number" />

        <EditText
            android:id="@+id/edit_text_inches"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:autofillHints="inches"
            android:hint="@string/inches"
            android:inputType="number" />
    </LinearLayout
        >

    <EditText
        android:id="@+id/edit_text_weight"
        android:layout_width="65dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:autofillHints="weight"
        android:hint="@string/weight"
        android:inputType="number"
        android:textColor="#000000"
        />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/text_view_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"/>


</LinearLayout>